[project]
name = "sam2-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx-graphsurgeon>=0.5.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "onnxsim==0.4.30",
    "polygraphy>=0.49.9",
    "ruff>=0.8.4",
    "sam2>=1.1.0",
]
